syntax = "proto3";

option java_package = "sinnet.grpc.timeentries";
option java_outer_classname = "TimeentriesProto";
option java_multiple_files = true;

import "common.proto";
import "customers.proto";

package timeentries;

service TimeEntries {
  rpc search(SearchQuery) returns (SearchReply);
  rpc get(GetQuery) returns (GetReply);
  rpc reserve(ReserveCommand) returns (ReserveResult);
  rpc remove(RemoveCommand) returns (RemoveResult);
  rpc update(UpdateCommand) returns (UpdateResult);
}

message SearchQuery {
  string projectId = 1;
  LocalDate from = 2;
  LocalDate to = 3;
}
message SearchReply {
  repeated TimeEntryModel activities = 1;
}

message GetQuery {
  string projectId = 1;
  string timeentryId = 2;
}

message GetReply {
  TimeEntryModel item = 1;
}

message ReserveCommand {
  common.UserToken invoker = 1;
  oneof optional_when {
    LocalDate when = 2;
  }
}
message ReserveResult {
  common.EntityId entityId = 1;
}

message RemoveCommand {
  common.UserToken invoker = 1;
  common.EntityId entityId = 2;
}
message RemoveResult {
  bool result = 1;
}

message UpdateCommand {
  TimeEntryModel model = 1;
}

message UpdateResult {
  bool success = 1;
}

message TimeEntryModel {
  common.EntityId entityId = 1;
  string customerId = 2;
  string servicemanName = 3;
  LocalDate whenProvided = 4;
  string description = 5;
  int32 duration = 6;
  int32 distance = 7;
  string servicemanEmail = 8;
}

message LocalDate {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}
