syntax = "proto3";

option java_package = "sinnet.grpc.users";
option java_outer_classname = "UsersProto";
option java_multiple_files = true;

package usersprojects;

import "common.proto";

service Users {
  rpc search(SearchRequest) returns (SearchReply) {}
}

message SearchRequest {
  common.UserToken userToken = 1;
}

message SearchReply {
  repeated UsersSearchModel items = 1;
}

message UsersSearchModel {
  string entityId = 1;
  string email = 2;
}
